@@ -9,11 +9,6 @@ AM_PROG_AR
 AC_PROG_LIBTOOL
 AC_PROG_CC
 AC_CONFIG_MACRO_DIR([m4])
-AC_CHECK_HEADER([libudev.h])
-if test "$ac_cv_header_libudev_h" == no
-then
-  AC_MSG_ERROR([This package needs libudev.h to get compiled.])
-fi
 AC_CONFIG_FILES([
         Makefile
         src/Makefile
